--- a/css/styles.css
+++ b/css/styles.css
@@ -10364,6 +10364,18 @@ body {
   margin-top: 5rem;
 }
 
+@media (min-width: 368px){
+  .mesthead h1 {
+    font-size: 2.2rem;
+  }
+}
+
+@media (min-width: 346){
+  .mesthead h1 {
+    font-size: 2rem;
+  }
+}
+
 .contact-section .social a {
   text-align: center;
   height: 3rem;
